[package]
name = "home_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "*", features = ["vendored"] }
prometheus = "0.13.1"
paho-mqtt = "0.11.1"
signal-hook = "0.3.14"
